Fixed pagination options, productCard heading overflow.

--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
 
-.banner{
+.banner {
     height: 100vh;
     background: linear-gradient(to right, #160000, #290000);
     color: white;
@@ -13,7 +13,7 @@
     width: 100%;
 }
 
-.banner::after{
+.banner::after {
     content: "";
     position: absolute;
     top: 0;
@@ -26,22 +26,22 @@
     max-height: 100vw;
 }
 
-.banner > h1{
+.banner>h1 {
     font: 700 calc(28px + 1vw) "Josefin Sans", sans-serif;
     margin: 10px 0px;
 }
 
-.banner p{
+.banner p {
     font: 500 calc(15px + 1vw) "Josefin Sans", sans-serif;
     margin: 20px 0px;
 }
 
-.banner > div {
+.banner>div {
     font: 500 23px "Josefin Sans", sans-serif;
     text-decoration: wavy;
 }
 
-.homeScrollButton{
+.homeScrollButton {
     background-color: white;
     font: 500 17px 'Roboto', sans-serif;
     border: 2px solid white;
@@ -51,12 +51,12 @@
     margin-top: 10px;
 }
 
-.homeScrollButton:hover{
+.homeScrollButton:hover {
     background-color: transparent;
     color: white;
 }
 
-.homeHeading{
+.homeHeading {
     width: fit-content;
     border-bottom: 1px solid grey;
     margin: 20px auto;
@@ -69,7 +69,7 @@
 
 /* Product Component CSS */
 
-.homeContainer{
+.homeContainer {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
@@ -77,7 +77,7 @@
     margin: auto;
 }
 
-.productCard{
+.productCard {
     width: 250px;
     display: flex;
     justify-content: center;
@@ -89,26 +89,39 @@
     padding: 10px;
 }
 
-.productCard:hover{
+.productCard:hover {
     box-shadow: 3px 3px 9px 2px #9e9e9e;
     transform: translateY(-7px);
 }
 
-.productCard > img{
+.productCard>img {
     width: 100%;
     margin: 10px 0px;
+    height: 240px;
+    object-fit: cover;
 }
 
-.productCard > div{
+.productCard>div {
     color: tomato;
     font: 500 18px 'Roboto', sans-serif;
     margin: 5px 0px;
+}
+
+.productCard>h4 {
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    -webkit-box-orient: vertical;
 }
 
 /* .productCard > div > span{
     font-size: 15px;
 } */
 
-.nav1, .nav2, .nav3, .nav4{
+.nav1,
+.nav2,
+.nav3,
+.nav4 {
     backdrop-filter: blur(4px);
 }
